# genetic-lisa

./: .gitignore  .gitmodules  readme.markdown  readme.md
attempts/lisa2-triangles/: best-12-20-11-20.json  best-2017-11-17-13-56.json  best-2017-11-29-15-21.json  best-2017-11-30-14-51.json
c/: mona-lisa.c
couch-db/_attachments/style/: main.css
couch-db/views/min-fitness/: map.js
lisa/: _id
lisa/_attachments/: genetics-of-a-smile.html  index.html
lisa/_attachments/scripts/: plib.js
lisa/views/random-strain/: map.js
python/: genetic-images.py
rust/: 67m.json  Cargo.toml  makegif.sh
rust/attempts/: 115m-triangles.json  18m-stag.json  26m-lena-tri.json  35m.json  36m-starry-night.json  39m-starry-night.json  42m.json  43m-lena.json  52m.json  57m.json  59m.json  60m.json  63m.json  64m.json  74m-lena.json  79m-starry-night.json  83m-starry-night.json  85m-starry-night.json  87m-starry-night.json  91m-triangles.json  9m-small.json
rust/src/: ;  canvas.rs  canvascache.rs  color.rs  context.rs  lisa.rs  main.rs  rando.rs  shapelist.rs  shapes.rs
