[package]
name = "lisa"
version = "0.1.0"
authors = ["Peter Braden <peterbraden@peterbraden.co.uk>"]

[dependencies]
darwin-rs = "0.4"
rand = "*"
"jpeg-decoder" = "*"
lazy_static = "0.2.8"
serde = "1.0.11"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.19"
env_logger = "0.3"
image="*"
chrono="0.4.0"
lru-cache="0.1.1"

[profile.release]
debug = true




